--- a/delice_sens.html
+++ b/delice_sens.html
@@ -32,183 +32,185 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Entrées
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-1">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Tartare de thon
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Assaisonné au yuzu 
-                            </span>
+            <div class="menu__types">
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Entrées
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-1">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Tartare de thon
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Assaisonné au yuzu 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                25€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            25€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-2">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Bouchée de homard croustillant
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et sa farandole de petits légumes
-                            </span>
+                    <div class="dish" id="dish-2">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Bouchée de homard croustillant
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et sa farandole de petits légumes
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                35€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            35€
-                        </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-3">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Velouté de cèpes
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Aux truffes
-                            </span>
-                        </div>
-                        <div class="dish__infos__price">
-                            20€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Plats
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-4">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Poulet rôti aux herbes de Provence
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et sa crème de truffe
-                            </span>
+                    <div class="dish" id="dish-3">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Velouté de cèpes
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Aux truffes
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                20€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            40€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish" id="dish-5">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Langouste rôtie
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et ses légumes de saison 
-                            </span>
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Plats
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-4">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Poulet rôti aux herbes de Provence
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et sa crème de truffe
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                40€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            35€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-6">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Côte de boeuf Angus
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et sa purée de panais 
-                            </span>
+                    <div class="dish" id="dish-5">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Langouste rôtie
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et ses légumes de saison 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                35€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            44€
-                        </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Desserts
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-7">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Farandole de desserts
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Du chef
-                            </span>
-                        </div>
-                        <div class="dish__infos__price">
-                            18€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-8">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Crème brulée
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Revisitée
-                            </span>
+                    <div class="dish" id="dish-6">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Côte de boeuf Angus
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et sa purée de panais 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                44€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            22€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish" id="dish-9">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Tiramisu
-                            </span>
-                            <span class="dish__infos__text__description">
-                                À la noisette 
-                            </span>
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Desserts
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-7">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Farandole de desserts
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Du chef
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                18€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            23€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
+                    <div class="dish" id="dish-8">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Crème brulée
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Revisitée
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                22€
+                            </div>
+                        </div>
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="dish" id="dish-9">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Tiramisu
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    À la noisette 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                23€
+                            </div>
+                        </div>
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
             </div>
