--- a/palette_gout.html
+++ b/palette_gout.html
@@ -32,190 +32,192 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Entrées
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-1">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Fricassée d'escargot
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Au piment d'Espelette 
-                            </span>
+            <div class="menu__types">
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Entrées
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-1">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Fricassée d'escargot
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Au piment d'Espelette 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                25€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            25€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-2">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Foie gras de canard mi-cuit
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et ses copeaux de truffe noire
-                            </span>
+                    <div class="dish" id="dish-2">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Foie gras de canard mi-cuit
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et ses copeaux de truffe noire
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                35€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            35€
-                        </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-3">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Oeuf au plat
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Assaisonné à la truffe sur lit de caviar
-                            </span>
-                        </div>
-                        <div class="dish__infos__price">
-                            20€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Plats
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-4">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Filet de boeuf aux herbes
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Accompagné de sa ribambelle de légumes
-                            </span>
+                    <div class="dish" id="dish-3">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Oeuf au plat
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Assaisonné à la truffe sur lit de caviar
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                20€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            40€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish" id="dish-5">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Parmentier de queue de boeuf
-                            </span>
-                            <span class="dish__infos__text__description">
-                                À la truffe noire sur sa purée de panais 
-                            </span>
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Plats
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-4">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Filet de boeuf aux herbes
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Accompagné de sa ribambelle de légumes
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                40€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            35€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-6">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Filet de turbot
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Aux agrumes 
-                            </span>
+                    <div class="dish" id="dish-5">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Parmentier de queue de boeuf
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    À la truffe noire sur sa purée de panais 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                35€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            44€
-                        </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu__type">
-                <div class="menu__type__title">
-                    Desserts
-                    <div class="border"></div>
-                </div>
-                <div class="dish" id="dish-7">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Paris-Brest
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Revisité
-                            </span>
-                        </div>
-                        <div class="dish__infos__price">
-                            18€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="dish" id="dish-8">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Macaron au chocolat d'exception
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Et glace à la vanille de Madagascar
-                            </span>
+                    <div class="dish" id="dish-6">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Filet de turbot
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Aux agrumes 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                44€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            22€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
-                    </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="dish" id="dish-9">
-                    <div class="dish__infos">
-                        <div class="dish__infos__text">
-                            <span class="dish__infos__text__title">
-                                Mousse au chocolat
-                            </span>
-                            <span class="dish__infos__text__description">
-                                Au piment d'Espelette et à la truffe noire 
-                            </span>
+                <div class="menu__type">
+                    <div class="menu__type__title">
+                        Desserts
+                        <div class="border"></div>
+                    </div>
+                    <div class="dish" id="dish-7">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Paris-Brest
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Revisité
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                18€
+                            </div>
                         </div>
-                        <div class="dish__infos__price">
-                            23€
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
                         </div>
                     </div>
-                    <div class="dish__checked">
-                        <i class="fa-regular fa-circle-check"></i>
+                    <div class="dish" id="dish-8">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Macaron au chocolat d'exception
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Et glace à la vanille de Madagascar
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                22€
+                            </div>
+                        </div>
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div class="dish" id="dish-9">
+                        <div class="dish__infos">
+                            <div class="dish__infos__text">
+                                <span class="dish__infos__text__title">
+                                    Mousse au chocolat
+                                </span>
+                                <span class="dish__infos__text__description">
+                                    Au piment d'Espelette et à la truffe noire 
+                                </span>
+                            </div>
+                            <div class="dish__infos__price">
+                                23€
+                            </div>
+                        </div>
+                        <div class="dish__checked">
+                            <i class="fa-regular fa-circle-check"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="menu__commander">
-                <div class="btn">
-                    Commander
-                </div>
+                    <div class="btn">
+                        Commander
+                    </div>
             </div>
         </div>
         <footer>
